mejoras de ejemplos de hasta java 25